log/build_2025-01-04_15-31-18/mypkg/stderr.log
  File "/home/tashu/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 16
    except requests.exceptions.RequestException as e:
    ^
SyntaxError: invalid syntax

